cli/tests/snapshots/explain__explains_the_worked_example.snap
---
source: cli/tests/explain.rs
expression: "explain(&[\"mycli\", \"-j8\", \"--env=prod\", \"build\", \"a\", \"b\", \"--\", \"--raw\"])"
---
mycli -j8 --env=prod build a b -- --raw
command  mycli build

tokens
  [0]  mycli       program
  [1]  -j8         flag -j, value of jobs = "8", attached
  [2]  --env=prod  flag --env, value of env = "prod", attached
  [3]  build       subcommand build
  [4]  a           arg target = "a"
  [5]  b           refused, extra only accepts words after `--`
  [6]  --          separator
  [7]  --raw       arg extra = "--raw"

values
  flag  --jobs       8      argv [1]
  flag  --env        prod   argv [2]
  flag  --color      never  env MYCLI_COLOR
  flag  --profile    prod   env MYCLI_PROFILE
  flag  --strict     true   default_if --profile when="prod"
  arg   <target>     a      argv [4]
  arg   [-- extra]…  --raw  argv [7]

shadowed
  flag  --jobs   default 1     lost to argv [1]
  flag  --color  default auto  lost to env MYCLI_COLOR

errors
  Argument <extra> can only be set after a `--` separator
